[package]
name = "create-file"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from"] }
mkutils = { git = "https://github.com/mkxl/mkutils-rs", rev = "ddfeb3e4814e170cb21250b63ffdb1527c7aff7f", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"

[lints.clippy.pedantic]
level = "deny"
