[package]
name = "create-file"
version = "0.1.0"
edition = "2024"
description = "ftg"
readme = "README.md"
repository = "https://github.com/mkxl/create-file.git"
license = "Apache-2.0"
keywords = ["create-file"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from"] }
mkutils = { version = "0.1.102", features = ["serde", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
cargo = "deny"
nursery = "deny"
pedantic = "deny"
multiple_crate_versions = { level = "allow", priority = 1 }
